@@ -1,8 +1,9 @@
 Overview
 ========
 
-The z3c.jbot (or "Just a bunch of templates") package allows drop-in
-page template overrides. It works on Zope 2 and Zope 3.
+The ``z3c.jbot`` (or "Just a bunch of templates") package allows
+drop-in page template overrides. It works on Zope 2 and Zope 3. The
+Chameleon rendering engine is supported [#]_.
 
 Any template that is defined as a class-attribute can be overriden
 using jbot, e.g. those used in views, viewlets and portlets. The
@@ -31,6 +32,9 @@ use with jbot using a ZCML-directive::
 
 Use of this package adds a small (2-3 ms per request on Plone) to the
 total application response time.
+
+.. [#] To enable Chameleon on Zope 2, use the ``five.pt`` package
+(CMF-apps like Plone should use ``cmf.pt`` which adds full support).
 
 Author
 ------
